Terminado código con las pruebas

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /Lab 1
 /.vscode
 /Lab
+/Lab_2/ejercicio_3_1
+/Lab_2/ejercicio_3_2
+/Lab_2/ejercicio_3_3
+/Lab_2/ejercicio_3_3_2
+/Lab_2/ejercicio_3_4
+/Lab_2/ejercicio_3_4_2
+/Lab_2/ejercicio_3_7
+
